; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/platforms/cell/extr_celleb_scc_pciex.c___scc_pciex_outw.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/platforms/cell/extr_celleb_scc_pciex.c___scc_pciex_outw.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pci_controller = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.pci_controller*, i32, i64)* @__scc_pciex_outw to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @__scc_pciex_outw(%struct.pci_controller* %0, i32 %1, i64 %2) #0 {
  %4 = alloca %struct.pci_controller*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.pci_controller* %0, %struct.pci_controller** %4, align 8
  store i32 %1, i32* %5, align 4
  store i64 %2, i64* %6, align 8
  %9 = load i64, i64* %6, align 8
  %10 = and i64 %9, 3
  %11 = icmp ult i64 %10, 3
  br i1 %11, label %12, label %17

12:                                               ; preds = %3
  %13 = load %struct.pci_controller*, %struct.pci_controller** %4, align 8
  %14 = load i64, i64* %6, align 8
  %15 = load i32, i32* %5, align 4
  %16 = call i32 @scc_pciex_write_port(%struct.pci_controller* %13, i64 %14, i32 2, i32 %15)
  br label %32

17:                                               ; preds = %3
  %18 = load i32, i32* %5, align 4
  %19 = and i32 %18, 255
  store i32 %19, i32* %7, align 4
  %20 = load i32, i32* %5, align 4
  %21 = and i32 %20, 65280
  %22 = ashr i32 %21, 8
  store i32 %22, i32* %8, align 4
  %23 = load %struct.pci_controller*, %struct.pci_controller** %4, align 8
  %24 = load i64, i64* %6, align 8
  %25 = load i32, i32* %7, align 4
  %26 = call i32 @scc_pciex_write_port(%struct.pci_controller* %23, i64 %24, i32 1, i32 %25)
  %27 = load %struct.pci_controller*, %struct.pci_controller** %4, align 8
  %28 = load i64, i64* %6, align 8
  %29 = add i64 %28, 1
  %30 = load i32, i32* %8, align 4
  %31 = call i32 @scc_pciex_write_port(%struct.pci_controller* %27, i64 %29, i32 1, i32 %30)
  br label %32

32:                                               ; preds = %17, %12
  ret void
}

declare dso_local i32 @scc_pciex_write_port(%struct.pci_controller*, i64, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
